# Aegis

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Caddyfile  DOCKER_VERIFY_PLAN.md  GEMINI.md  Makefile  README.md  ROADMAP.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  main.py  plan.md  pyproject.toml  start.sh
.claude/skills/aegis-troubleshooting/: SKILL.md
.claude/skills/frontend-design-team/: SKILL.md
.claude/skills/multi-agent-orchestration/: SKILL.md
.claude/skills/project-manager/: SKILL.md
.claude/skills/workflow/: SKILL.md
.claude/workflows/: adlc-feature.js
.github/workflows/: build-and-push.yml  deploy-vercel.yml  release.yml  test.yml
ai_engine/: agent.py  context_builder.py
ai_engine/models/: lstm.py
backend/: .dockerignore  .env.example  Dockerfile  app.py  docker-entrypoint.sh  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 686549b8431b_initial_schema_with_user_auth.py  a1c8f3b4e501_v080_onboarded_and_notifications.py  a7c5e2f81d20_v095_tags_per_user_unique.py  b2d9e4f1a701_v090_trip_entity.py  b8d6f3e92c14_v096_user_fk_cascade.py  c3e1f5a82b14_v091_user_preferences.py  c9e7d4f80371_v097_hot_path_indexes.py  d4f2a5b91c01_v092_salary_split_schedule.py  d6f8a3b15942_v098_more_hot_indexes.py  e5a3b7c20d11_v093_investments.py  e7a2b9c41f06_v099_notifications_list_index.py  f6b4c8d92e15_v094_google_oauth.py
backend/app/: auth.py  cache.py  config.py  database.py  jobs.py  logging_config.py  main.py  worker.py
backend/app/mcp/: __init__.py  schemas.py  server.py  session.py
backend/app/mcp/tools/: __init__.py  ai.py  budgets.py  plans.py  reports.py  transactions.py  trips.py
backend/app/middleware/: __init__.py  body_size.py  rate_limit.py  request_id.py  security.py
backend/app/models/: __init__.py  ai_recommendation.py  budget.py  debt.py  investment.py  notification.py  payment.py  plan.py  savings_goal.py  tag.py  transaction.py  trip.py  user.py  user_preferences.py
backend/app/routers/: ai.py  auth.py  budgets.py  calendar.py  dashboard.py  debts.py  export.py  gantt.py  investments.py  jobs.py  market.py  notifications.py  payments.py  plans.py  preferences.py  reports.py  savings_goals.py  transactions.py  trips.py
backend/app/schemas/: ai.py  auth.py  budget.py  dashboard.py  debt.py  investment.py  market.py  notification.py  payment.py  plan.py  savings_goal.py  transaction.py  trip.py  user_preferences.py
backend/app/seeds/: demo.py
backend/app/services/: ai_engine.py  notification_service.py  pdf_renderer.py  recurrence.py
backend/app/services/market/: __init__.py  base.py  binance.py  finnhub.py
backend/app/templates/: report.html
backend/src/: main.py
backend/src/automation/: headless_bank.py
backend/src/core/: multi_currency.py
backend/src/database/: connection.py  models.py
backend/src/routes/: ai.py  bills.py  budget.py  calendar.py  debt.py  gantt.py  history.py  reports.py  savings.py
backend/src/rust_ffi/: engine.rs
backend/src/simulations/: monte_carlo.mojo
backend/tests/: conftest.py  test_budget_alerts.py  test_budget_templates.py  test_investments.py  test_market.py  test_mcp_session.py  test_mcp_tools.py  test_preferences.py  test_recurrence.py  test_smoke.py  test_transaction_update.py  test_trips.py
docs/: PERFORMANCE_BACKLOG.md  adlc.md  analytics-warehouses.md  architecture.md  databases.md  harness-engineering.md
docs/deployment/: README.md  aws.md  gcp.md  self-hosted.md  vercel-deploy-workflow.md  vercel-experimental.md  vercel-neon.md  vercel.md
docs/design/: 001-background-worker-queue.md  002-async-sqlalchemy-migration.md  003-rsc-dashboard-migration.md  004-ai-animation-and-interactive-investments.md  005-budget-templates.md
docs/tutorials/: 01-getting-started.md  02-import-transactions.md  03-using-the-ai-assistant.md  06-deploy-production.md  11-caching.md  README.md
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/ai/: AIChat.tsx  page.tsx
frontend/app/bills/: BillReminders.tsx  page.tsx
frontend/app/budget/: BudgetTracker.tsx  page.tsx
frontend/app/calendar/: CalendarView.tsx  page.tsx
frontend/app/components/: Sidebar.tsx
frontend/app/debt/: DebtTracker.tsx  page.tsx
frontend/app/gantt/: GanttChart.tsx  page.tsx
frontend/app/history/: HistoryView.tsx  page.tsx
frontend/app/reports/: ReportsView.tsx  page.tsx
frontend/app/savings/: SavingsJars.tsx  page.tsx
frontend/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/src/app/budgets/: error.tsx  loading.tsx  page.tsx
frontend/src/app/calendar/: error.tsx  loading.tsx  page.tsx
frontend/src/app/debts/: error.tsx  loading.tsx  page.tsx
frontend/src/app/docs/: error.tsx  page.tsx
frontend/src/app/gantt/: error.tsx  page.tsx
frontend/src/app/investments/: page.tsx
frontend/src/app/landing/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/payments/: error.tsx  loading.tsx  page.tsx
frontend/src/app/plans/: error.tsx  loading.tsx  page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: global-shortcuts.tsx  onboarding-tour.tsx
frontend/src/hooks/: use-toast.ts
frontend/src/lib/: animations.ts  api.ts  utils.ts
frontend/src/stores/: app-store.ts  auth-store.ts  notification-store.ts  toast-store.ts
frontend/src/types/: index.ts
infrastructure/: docker-compose.yml
infrastructure/k8s/: deployment.yaml
scripts/: bootstrap.sh
sdks/go/: ai.go  bills.go  budget.go  calendar.go  client.go  debts.go  go.mod  goals.go  history.go  models.go  reports.go  savings.go
sdks/python/: pyproject.toml
sdks/python/aegis_sdk/: __init__.py  client.py  models.py
sdks/python/aegis_sdk/resources/: __init__.py  ai.py  bills.py  budget.py  calendar.py  debts.py  goals.py  history.py  reports.py  savings.py
sdks/typescript/: package-lock.json  package.json
sdks/typescript/src/: client.ts  index.ts  types.ts
(+83 files in other folders)
