[project]
name = "money-management-project"
version = "0.4.0"
description = "Aegis - Autonomous Wealth OS with AI-powered financial analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.0",
    "litestar>=2.21.1",
    "loguru>=0.7.3",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.41.0",
]
