[project]
name = "money-management-project"
version = "0.5.0"
description = "AI-powered money management with calendar planning, Gantt charts, and smart recommendations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "fastapi>=0.128.0",
    "loguru>=0.7.3",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "pymysql>=1.1.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.45",
    "stripe>=11.0.0",
    "uvicorn>=0.34.0",
]
