[project]
name = "money-management-project"
version = "1.0.0"
description = "AI-powered money management with calendar planning, Gantt charts, and smart recommendations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.15.0",
    "anthropic>=0.40.0",
    "fastapi>=0.128.0",
    "jinja2>=3.1.4",
    "loguru>=0.7.3",
    "matplotlib>=3.9.2",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "passlib[bcrypt]>=1.7.4",
    # passlib 1.7.4 reads bcrypt.__about__.__version__ which bcrypt 5.x removed,
    # and bcrypt 5 rejects passlib's detect_wrap_bug probe — register/login break.
    "bcrypt>=4.0,<5",
    "psycopg2-binary>=2.9.11",
    "pymysql>=1.1.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.45",
    "stripe>=11.0.0",
    "uvicorn>=0.34.0",
    "weasyprint>=63.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]
