[project]
name = "money-management-project"
version = "1.0.0"
description = "AI-powered money management with calendar planning, Gantt charts, and smart recommendations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.15.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "fastapi>=0.128.0",
    "jinja2>=3.1.4",
    "loguru>=0.7.3",
    "matplotlib>=3.9.2",
    "numpy>=2.4.0",
    # pandas removed in v1.1 — CSV import now uses stdlib csv.DictReader
    # (~10× faster on ingest, drops ~30 MB of cold-start memory).
    # matplotlib keeps numpy as a transitive dep for the PDF charts.
    "passlib[bcrypt]>=1.7.4",
    # passlib 1.7.4 reads bcrypt.__about__.__version__ which bcrypt 5.x removed,
    # and bcrypt 5 rejects passlib's detect_wrap_bug probe — register/login break.
    "bcrypt>=4.0,<5",
    "psycopg2-binary>=2.9.11",
    "pymysql>=1.1.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.20",
    "google-auth>=2.30.0",
    "redis>=5.0.0",
    # arq drives the background-worker queue (PDF rendering, AI batch
    # summaries). Optional at runtime: if CACHE_REDIS_URL isn't set the
    # PDF endpoint falls back to inline rendering. arq's only hard dep
    # is redis (already required by cache + rate limiter).
    "arq>=0.26",
    # asyncpg powers the AsyncSession factory in database.py. Optional
    # at runtime — the sync engine (psycopg2) stays the default. New
    # routes can opt-in to async via Depends(get_async_db). See
    # docs/design/002-async-sqlalchemy-migration.md for the per-router
    # migration recipe.
    "asyncpg>=0.30.0",
    "sqlalchemy>=2.0.45",
    "stripe>=11.0.0",
    # [standard] pulls uvloop + httptools — uvicorn picks them up
    # automatically for a faster event loop and HTTP parser.
    "uvicorn[standard]>=0.34.0",
    "weasyprint>=63.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "httpx>=0.27",
]
dev = [
    "ruff>=0.8.0",
    "bandit>=1.8.0",
]

[project.scripts]
aegis-mcp = "app.mcp.server:main"

# Flat layout with two top-level dirs (app/, alembic/) breaks
# setuptools auto-discovery — editable installs error with "Multiple
# top-level packages discovered". Only `app` is the importable package;
# alembic/ is migration scripts loaded by path.
[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]
