[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aegis-sdk"
version = "0.1.0"
description = "Python SDK for the Aegis Money Management API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
]
